--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
+@font-face {
+    font-family: "Digital";
+    src: url("./resources/digital-7.mono.ttf");
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* outline: 1px solid salmon; */
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
+button {
+    cursor: pointer;
+}
+
+
+/* CLASSES */
+
+.container {
+    max-width: 1450px;
+    margin: 0 auto;
+}
+
+.number {
+    font-family: "Digital";
+}
+
+.score {
+    font-size: 5rem;
+}
+
+.btn-round {
+    padding: 0.25rem 0.5rem;
+    border-radius: 1rem;
+    border-width: 3px;
+    font-weight: 600;
+    background-color: transparent;
 }
