--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @font-face {
     font-family: "Digital";
     src: url("./resources/digital-7.mono.ttf");
@@ -11,7 +13,7 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -46,7 +48,58 @@ button {
 .btn-round {
     padding: 0.25rem 0.5rem;
     border-radius: 1rem;
-    border-width: 3px;
     font-weight: 600;
     background-color: transparent;
+}
+
+.bdr-black {
+    border-color: #000;
+}
+
+.bdr-white {
+    border-color: #fff;
+}
+
+.bdr-green {
+    border-color: #0f0;
+}
+
+.bdr-red {
+    border-color: #f00;
+}
+
+.bdr-solid {
+    border-style: solid;
+}
+
+.bdr-3 {
+    border-width: 3px;
+}
+
+.bg-black {
+    background-color: #000;
+}
+
+.bg-white {
+    background-color: #fff;
+}
+
+.txt-white {
+    color: #fff;
+}
+
+.txt-center {
+    text-align: center;
+}
+
+.pad-ver-1 {
+    padding: 1rem 0;
+}
+
+.pad-hor-1 {
+    padding: 0 1rem;
+}
+
+.pad-all-1 {
+    padding: 1rem;
 }
