--- a/src/index.css
+++ b/src/index.css
@@ -340,6 +340,71 @@ main {
     background-color: #f00;
 }
 
+/* modal */
+.modal {
+    position: fixed;
+    z-index: 1;
+    padding-top: 7rem;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: auto;
+    padding: 1rem 1.5rem 1.5rem;
+    border: 1px solid #888;
+    border-radius: 24px;
+    width: 400px;
+}
+
+.modal-content button {
+    margin: 1rem auto 0;
+    color: #000;
+    background-color: transparent;
+    border: 1px solid #000;
+}
+
+.modal-content button:hover {
+    color: #fff;
+    background-color: #000;
+}
+
+.modal-name-input {
+    margin: 1rem auto 0;
+}
+
+.modal-warning {
+    font-size: 0.8rem;
+    color: #f00;
+    display: none;
+}
+
+.modal-close {
+    color: #aaaaaa;
+    font-size: 1.5rem;
+    font-weight: bold;
+    transition: all 0.2s;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 /* IDS */
 
