Finish basic add/remove functionality

--- a/src/index.css
+++ b/src/index.css
@@ -361,38 +361,37 @@ main {
 }
 
 .modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     background-color: #fff;
     margin: auto;
-    padding: 1rem 1.5rem 1.5rem;
+    padding: 1.5rem;
     border: 1px solid #888;
     border-radius: 24px;
     width: 400px;
 }
 
-.modal-content button {
-    margin: 1rem auto 0;
-    color: #000;
-    background-color: transparent;
-    border: 1px solid #000;
-}
-
-.modal-content button:hover {
-    color: #fff;
-    background-color: #000;
-}
-
 .modal-name-input {
-    margin: 1rem auto 0;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    gap: 0.5rem;
+    margin: auto;
 }
 
 .modal-warning {
     font-size: 0.8rem;
     color: #f00;
-    display: none;
+    text-align: center;
 }
 
 .modal-close {
-    color: #aaaaaa;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    color: #aaa;
     font-size: 1.5rem;
     font-weight: bold;
     transition: all 0.2s;
@@ -401,7 +400,6 @@ main {
 .modal-close:hover,
 .modal-close:focus {
     color: #000;
-    text-decoration: none;
     cursor: pointer;
 }
 
@@ -431,6 +429,11 @@ main {
 }
 
 #add-player-btn:hover {
+    color: #fff;
+    background-color: #000;
+}
+
+#submit-player-name:hover {
     color: #fff;
     background-color: #000;
 }
