--- a/src/index.css
+++ b/src/index.css
@@ -1,507 +1,516 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @font-face {
-    font-family: "Digital";
-    src: url("./resources/digital-7.mono.ttf");
+  font-family: "Digital";
+  src: url("./resources/digital-7.mono.ttf");
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins";
-    /* outline: 1px solid salmon; */
-    /* max-width: 100%; */
-    /* overflow-x: hidden; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins";
+  /* outline: 1px solid salmon; */
+  /* max-width: 100%; */
+  /* overflow-x: hidden; */
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 button,
 a {
-    cursor: pointer;
-    text-decoration: none;
-    transition: all 0.2s;
+  cursor: pointer;
+  text-decoration: none;
+  transition: all 0.2s;
 }
 
 main {
-    flex: 1;
+  flex: 1;
 }
-
 
 /* CLASSES */
 
 .container {
-    max-width: 1450px;
-    margin: 0 auto;
+  max-width: 1450px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1450px) {
-    .container {
-        /* padding: 0 24px; */
-        padding: 0 1.5rem;
-    }
+  .container {
+    /* padding: 0 24px; */
+    padding: 0 1.5rem;
+  }
 }
 
 .number {
-    font-family: "Digital";
+  font-family: "Digital";
 }
 
 .btn-default {
-    padding: 0.25rem 0.5rem;
-    font-weight: 600;
-    background-color: transparent;
+  padding: 0.25rem 0.5rem;
+  font-weight: 600;
+  background-color: transparent;
 }
 
 .bdr-round-1 {
-    border-radius: 1rem;
+  border-radius: 1rem;
 }
 
 .bdr-black {
-    border-color: #000;
+  border-color: #000;
 }
 
 .bdr-white {
-    border-color: #fff;
+  border-color: #fff;
 }
 
 .bdr-green {
-    border-color: #0f0;
+  border-color: #0f0;
 }
 
 .bdr-red {
-    border-color: #f00;
+  border-color: #f00;
 }
 
 .bdr-solid {
-    border-style: solid;
+  border-style: solid;
 }
 
 .bdr-3 {
-    border-width: 3px;
+  border-width: 3px;
 }
 
 .bdr-4 {
-    border-width: 4px;
+  border-width: 4px;
 }
 
 .bdr-5 {
-    border-width: 5px;
+  border-width: 5px;
 }
 
 .bg-black {
-    background-color: #000;
+  background-color: #000;
 }
 
 .bg-white {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .txt-black {
-    color: #000;
+  color: #000;
 }
 
 .txt-white {
-    color: #fff;
+  color: #fff;
 }
 
 .txt-green {
-    color: #0f0;
+  color: #0f0;
 }
 
 .txt-red {
-    color: #f00;
+  color: #f00;
 }
 
 .txt-center {
-    text-align: center;
+  text-align: center;
 }
 
 .txt-small {
-    font-size: small;
+  font-size: small;
 }
 
 .txt-125 {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 .txt-semibold {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .txt-italic {
-    font-style: italic;
+  font-style: italic;
 }
 
 .pad-all-1 {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .pad-ver-1 {
-    padding: 1rem 0;
+  padding: 1rem 0;
 }
 
 .pad-hor-1 {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
 
 .pad-top-1 {
-    padding: 1rem 0 0;
+  padding: 1rem 0 0;
 }
 
 .pad-bot-1 {
-    padding: 0 0 1rem;
+  padding: 0 0 1rem;
 }
 
 .flex-space-between {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (max-width: 300px) {
-    .flex-space-between {
-        flex-direction: column;
-        gap: 0.5rem;
-    }
+  .flex-space-between {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .flex-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .gap-half {
-    gap: 0.5rem;
+  gap: 0.5rem;
 }
 
 .gap-2 {
-    gap: 2rem;
+  gap: 2rem;
 }
 
 .ver-gap-1 {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 
 .link:hover {
-    color: #0f0;
+  color: #0f0;
 }
 
 .no-bullets {
-    list-style: none;
+  list-style: none;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* player card */
 .card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    padding: 1.5em;
-    background-color: #000;
-    color: #fff;
-    border-radius: 1.5em;
-    box-shadow: 0.25em 0.25em rgba(85, 85, 85, 0.25);
-    min-width: 21.5em;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1.5em;
+  background-color: #000;
+  color: #fff;
+  border-radius: 1.5em;
+  box-shadow: 0.25em 0.25em rgba(85, 85, 85, 0.25);
+  min-width: 21.5em;
 }
 
 .close {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 1.5em;
-    transition: all 0.2s;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1.5em;
+  transition: all 0.2s;
 }
 
 .close:hover {
+  cursor: pointer;
+  color: #fff;
+}
+
+.name-row {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1.5em;
+  height: 3em;
+}
+
+.name {
+  font-size: 1.75em;
+}
+
+.bid-history {
+  width: 5.125em;
+  /* height: 100%; */
+}
+
+.past-bid {
+  width: 0.625em;
+  height: 0.625em;
+  border-radius: 50%;
+}
+
+.past-bid.right {
+  background-color: #0f0;
+}
+
+.past-bid.wrong {
+  background-color: #f00;
+}
+
+.undo {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1.2em;
+  transition: all 0.2s;
+}
+
+.undo:hover {
     cursor: pointer;
     color: #fff;
 }
 
-.name-row {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 1.5em;
-    height: 3em;
-}
-
-.name {
-    font-size: 1.75em;
-}
-
-.bid-history {
-    width: 5.125em;
-    /* height: 100%; */
-}
-
-.past-bid {
-    width: 0.625em;
-    height: 0.625em;
-    border-radius: 50%;
-}
-
-.past-bid.right {
-    background-color: #0f0;
-}
-
-.past-bid.wrong {
-    background-color: #f00;
-}
-
 .score-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 7em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 7em;
 }
 
 .bid {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    /* min-width: 3.125rem; */
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* min-width: 3.125rem; */
+  height: 100%;
 }
 
 .bid-btn {
-    padding: 0.25em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 2em;
-    height: 2em;
-    font-size: 1em;
+  padding: 0.25em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2em;
+  height: 2em;
+  font-size: 1em;
 }
 
 .bid-btn:hover {
-    background-color: #fff;
-    color: #000;
+  background-color: #fff;
+  color: #000;
 }
 
 .bid-num {
-    font-size: 1.5em;
-    text-align: center;
-    width: 100%;
+  font-size: 1.5em;
+  text-align: center;
+  width: 100%;
 }
 
 .score {
-    font-size: 7em;
-    width: 100%;
-    text-align: center;
+  font-size: 7em;
+  width: 100%;
+  text-align: center;
 }
 
 .yes-no {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 
 .yes-no-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5em;
-    border-radius: 50%;
-    width: 3.125rem;
-    height: 3.125rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+  border-radius: 50%;
+  width: 3.125rem;
+  height: 3.125rem;
 }
 
 .yes-no-btn:hover {
-    color: #000;
+  color: #000;
 }
 
 .plus:hover {
-    background-color: #0f0;
+  background-color: #0f0;
 }
 
 .minus:hover {
-    background-color: #f00;
+  background-color: #f00;
 }
 
 /* modal */
 .modal {
-    position: fixed;
-    z-index: 1;
-    padding-top: 7rem;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 1;
+  padding-top: 7rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .modal-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    background-color: #fff;
-    margin: auto;
-    padding: 1.5rem;
-    border: 1px solid #888;
-    border-radius: 24px;
-    width: 400px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  background-color: #fff;
+  margin: auto;
+  padding: 1.5rem;
+  border-radius: 24px;
+  width: 400px;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
 .modal-name-input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  margin: auto;
 }
 
 .modal-warning {
-    font-size: 0.8rem;
-    color: #f00;
-    text-align: center;
+  font-size: 0.8rem;
+  color: #f00;
+  text-align: center;
 }
 
 .modal-close {
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
-    color: #aaa;
-    font-size: 1.5rem;
-    font-weight: bold;
-    transition: all 0.2s;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  color: #aaa;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: all 0.2s;
 }
 
 .modal-close:hover,
 .modal-close:focus {
-    color: #000;
-    cursor: pointer;
+  color: #000;
+  cursor: pointer;
 }
-
 
 /* IDS */
 
 #root {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 #add-player-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* gap: 0.2rem; */
-    color: #000;
-    background-color: transparent;
-    /* border: 5px solid #000; */
-    border-radius: 50%;
-    height: 5rem;
-    width: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* gap: 0.2rem; */
+  color: #000;
+  background-color: transparent;
+  /* border: 5px solid #000; */
+  border-radius: 50%;
+  height: 5rem;
+  width: 5rem;
 }
 
 #add-player-btn .fa-user {
-    font-size: 2rem;
-    margin-left: 0.3rem;
+  font-size: 2rem;
+  margin-left: 0.3rem;
 }
 
 #add-player-btn .fa-plus {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 #add-player-btn:hover {
-    color: #fff;
-    background-color: #000;
+  color: #fff;
+  background-color: #000;
 }
 
 #submit-player-name:hover {
-    color: #fff;
-    background-color: #000;
+  color: #fff;
+  background-color: #000;
 }
 
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 400px) {
-    .card {
-        font-size: 0.65rem;
-    }
+  .card {
+    font-size: 0.65rem;
+  }
 
-    .cardholder {
-        flex-direction: column;
-    }
+  .cardholder {
+    flex-direction: column;
+  }
 
-    .yes-no-btn {
-        width: 2.03125rem;
-        height: 2.03125rem;
-    }
+  .yes-no-btn {
+    width: 2.03125rem;
+    height: 2.03125rem;
+  }
 
-    .bdr-3 {
-        border-width: 2px;
-    }
-    
-    .bdr-4 {
-        border-width: 3px;
-    }
-    
-    .bdr-5 {
-        border-width: 4px;
-    }
+  .bdr-3 {
+    border-width: 2px;
+  }
+
+  .bdr-4 {
+    border-width: 3px;
+  }
+
+  .bdr-5 {
+    border-width: 4px;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    .modal-content {
-        width: 250px;
-    }
+  .modal-content {
+    width: 250px;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    .modal-name-input {
-        flex-direction: column;
-    }
+  .modal-name-input {
+    flex-direction: column;
+  }
 }
