--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 
-@font-face {
+/* @font-face {
   font-family: "Digital";
   src: url("./resources/digital-7.mono.ttf");
+} */
+
+:root {
+  --red: #c8102e;
+  --blue: #3b82f6;
+  --darkblue: #335291;
 }
 
 * {
@@ -195,28 +201,8 @@ h1 {
   }
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.flex-wrap {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
 .justify-center {
   justify-content: center;
-}
-
-.gap-half {
-  gap: 0.5rem;
-}
-
-.gap-2 {
-  gap: 2rem;
 }
 
 .ver-gap-1 {
@@ -232,11 +218,7 @@ h1 {
 }
 
 .link:hover {
-  color: #0f0;
-}
-
-.no-bullets {
-  list-style: none;
+  color: var(--blue);
 }
 
 .header {
@@ -245,69 +227,89 @@ h1 {
   align-items: center;
 }
 
+.cardholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  list-style: none;
+}
+
 /* player card */
 .card {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 1em;
-  padding: 2.5rem 1.5rem 1.5rem 1.5rem;
+  justify-content: space-between;
+  /* gap: 1.5rem; */
+  padding: 3rem 1.5rem;
   background-color: white;
   color: black;
   border-radius: 1.5em;
   box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
-  min-width: 21.5em;
+  width: 20rem;
+  height: 28rem;
 }
 
 .close {
   position: absolute;
-  top: 1em;
-  right: 1em;
+  top: 1.5rem;
+  right: 1.5rem;
   color: rgba(0, 0, 0, 0.5);
-  font-size: 1.5em;
+  font-size: 1.5rem;
   transition: all 0.2s;
 }
 
 .close:hover {
   cursor: pointer;
-  color: black;
+  color: var(--red);
 }
 
-.name-row {
+.card-upper {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 1.5em;
-  height: 3em;
+  flex-direction: column;
+  gap: 0.2rem;
+  z-index: 1;
 }
 
 .name {
-  font-size: 1.75em;
+  font-size: 1.75rem;
+}
+
+.bid-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
 }
 
 .bid-history {
-  width: 5.125em;
-  /* height: 100%; */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  list-style: none;
 }
 
 .past-bid {
-  width: 0.625em;
-  height: 0.625em;
-  border-radius: 50%;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 
 .past-bid.right {
-  background-color: #0f0;
+  color: var(--blue);
 }
 
 .past-bid.wrong {
-  background-color: #f00;
+  color: var(--red);
 }
 
 .undo {
   color: rgba(0, 0, 0, 0.5);
   font-size: 1.2em;
   transition: all 0.2s;
+  visibility: hidden;
 }
 
 .undo:hover {
@@ -315,100 +317,112 @@ h1 {
   color: black;
 }
 
-.score-row {
+.card-lower {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 7em;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.score {
+  font-size: 10rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 9rem;
+  z-index: 0;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .bid {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  /* min-width: 3.125rem; */
-  height: 100%;
+  z-index: 1;
 }
 
 .bid-btn {
-  padding: 0.25em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 2em;
-  height: 2em;
-  font-size: 1em;
-  border: 3px solid black;
-  border-radius: 1rem;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
   background-color: transparent;
 }
 
-.bid-btn:hover {
-  background-color: black;
-  color: white;
+.bid-btn.plus {
+  border-width: 0 0.75rem 1.3rem 0.75rem;
+  border-color: transparent transparent black transparent;
+  margin-bottom: 0.5rem;
+}
+
+.bid-btn.plus:hover {
+  border-color: transparent transparent var(--blue) transparent;
+}
+
+.bid-btn.minus {
+  border-width: 1.3rem 0.75rem 0 0.75rem;
+  border-color: black transparent transparent transparent;
+  margin-top: 0.5rem;
+}
+
+.bid-btn.minus:hover {
+  border-color: var(--blue) transparent transparent transparent;
 }
 
 .bid-num {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   text-align: center;
-  width: 100%;
-}
-
-.score {
-  font-size: 7em;
-  font-weight: 700;
-  width: 100%;
-  text-align: center;
+  width: 4rem;
 }
 
 .yes-no {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 100%;
 }
 
 .yes-no-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5em;
-  border-radius: 50%;
-  width: 3.125rem;
-  height: 3.125rem;
-  border-width: 4px;
+  font-family: "DM Sans", sans-serif;
+  font-size: large;
+  font-weight: 600;
+  text-align: center;
+  padding: 0.3rem 0.5rem;
+  border-width: 3px;
   border-style: solid;
+  border-radius: 0.5rem;
   background-color: transparent;
+  width: 6rem;
 }
 
 .yes-no-btn:hover {
-  color: #000;
+  color: white;
 }
 
-.plus {
-  color: #0f0;
-  border-color: #0f0;
+.yes {
+  color: var(--blue);
+  border-color: var(--blue);
 }
 
-.plus:hover {
-  background-color: #0f0;
+.yes:hover {
+  background-color: var(--blue);
 }
 
-.minus {
-  color: #f00;
-  border-color: #f00;
+.no {
+  color: var(--red);
+  border-color: var(--red);
 }
 
-.minus:hover {
-  background-color: #f00;
+.no:hover {
+  background-color: var(--red);
 }
 
 /* modal */
 .modal {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   padding-top: 7rem;
   left: 0;
   top: 0;
