--- a/src/index.css
+++ b/src/index.css
@@ -246,7 +246,7 @@ h1 {
   padding: 3rem 1.5rem;
   background-color: white;
   color: black;
-  border-radius: 1.5em;
+  border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
   width: 20rem;
   height: 28rem;
@@ -471,7 +471,7 @@ h1 {
 
 .modal-warning {
   font-size: 0.8rem;
-  color: #f00;
+  color: var(--red);
   text-align: center;
 }
 
@@ -487,7 +487,7 @@ h1 {
 
 .modal-close:hover,
 .modal-close:focus {
-  color: #000;
+  color: black;
   cursor: pointer;
 }
 
@@ -532,39 +532,25 @@ h1 {
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 400px) {
-  .card {
+  /* .card {
     font-size: 0.65rem;
-  }
+  } */
 
   .cardholder {
     flex-direction: column;
   }
 
-  .yes-no-btn {
+  /* .yes-no-btn {
     width: 2.03125rem;
     height: 2.03125rem;
-  }
-
-  .bdr-3 {
-    border-width: 2px;
-  }
-
-  .bdr-4 {
-    border-width: 3px;
-  }
-
-  .bdr-5 {
-    border-width: 4px;
-  }
+  } */
 }
 
 @media screen and (max-width: 450px) {
   .modal-content {
     width: 250px;
   }
-}
 
-@media screen and (max-width: 450px) {
   .modal-name-input {
     flex-direction: column;
   }
