Fix modal mobile appearance

--- a/src/index.css
+++ b/src/index.css
@@ -520,7 +520,7 @@ h1 {
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
   color: black;
-  background-color: white;
+  background-color: transparent;
   font-family: "Lora", serif;
   font-weight: 700;
   text-align: center;
@@ -597,6 +597,7 @@ h1 {
   width: 6rem;
   margin: 0 auto;
   padding: 0.3rem 0.5rem;
+  color: black;
 }
 
 #submit-player-name:hover {
@@ -623,7 +624,7 @@ h1 {
 
 @media screen and (max-width: 450px) {
   .modal-content {
-    width: 250px;
+    width: 300px;
   }
 
   .modal-name-input {
