Tiny UI changes

--- a/src/index.css
+++ b/src/index.css
@@ -471,7 +471,6 @@ h1 {
 }
 
 .modal-warning {
-  font-size: 0.8rem;
   color: var(--red);
   text-align: center;
 }
@@ -520,7 +519,7 @@ h1 {
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
   color: black;
-  background-color: transparent;
+  background-color: white;
   font-family: "Lora", serif;
   font-weight: 700;
   text-align: center;
@@ -533,14 +532,21 @@ h1 {
   /* transform: rotate(10deg); */
 
   .name-line {
-    background-color: white;
+    color: white;
   }
+
+  /* .add-player-plus {
+    transform: rotate(90deg);
+  } */
 }
 
 .name-line {
-  width: 1.75rem;
+  /* width: 1.75rem;
   height: 0.15rem;
-  background-color: black;
+  background-color: black; */
+
+  text-align: left;
+  font-size: 0.5rem;
 }
 
 .add-player-plus {
@@ -548,6 +554,7 @@ h1 {
   line-height: 2.5rem;
   width: 100%;
   text-align: center;
+  /* transition: all 0.2s; */
 }
 
 .tiny-rectangles {
