Minor UI changes, add header menu

--- a/src/index.css
+++ b/src/index.css
@@ -68,11 +68,35 @@ h1 {
   font-weight: 1000;
 }
 
+menu {
+  display: flex;
+  gap: 3rem;
+}
+
 /* CLASSES */
 
 .container {
   max-width: 1450px;
   margin: 0 auto;
+}
+
+.menu-item {
+  display: inline-block;
+  color: white;
+  font-weight: 600;
+}
+
+.menu-item::after {
+  content: "";
+  display: block;
+  color: var(--blue);
+  width: 0;
+  border-bottom: 0.15rem solid;
+  transition: all 0.2s;
+}
+
+.menu-item:hover::after{
+  width: 50%;
 }
 
 @media screen and (max-width: 1450px) {
@@ -246,7 +270,7 @@ h1 {
   background-color: white;
   color: black;
   border-radius: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
   width: 20rem;
   height: 28rem;
 }
@@ -517,7 +541,7 @@ h1 {
   height: 5.6rem;
   border-style: none;
   border-radius: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.5) 3px 3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
   color: black;
   background-color: white;
   font-family: "Lora", serif;
