--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
-
-/* @font-face {
-  font-family: "Digital";
-  src: url("./resources/digital-7.mono.ttf");
-} */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 
 :root {
-  --red: #c8102e;
   --blue: #3b82f6;
   --darkblue: #335291;
+
+  --navy: #1a1a2e;
+  --gold: #d4af37;
+
+  --dark-gray: #333333;
+  --mid-gray: #808080;
+  --mid-light-gray: #b3b3b3;
+  --light-gray: #e0e0e0;
+  --off-white: #f9f9f9;
+
+  --green: #4caf50;
+  --red: #c8102e;
+  --teal: #00796b;
+  --maroon: #7b1f24;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Lora";
+  font-family: "Source Sans 3";
   /* outline: 1px solid salmon; */
   /* max-width: 100%; */
   /* overflow-x: hidden; */
@@ -45,27 +53,46 @@ a {
   transition: all 0.2s;
 }
 
+header {
+  background-color: var(--navy);
+  padding: 1rem 0;
+}
+
+header h1 {
+  color: var(--off-white);
+}
+
 header p {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Source Sans 3", sans-serif;
+}
+
+header span {
+  color: var(--gold);
 }
 
 main {
   flex: 1;
-  background-color: #f5f5f4;
+  background-color: var(--off-white);
 }
 
 footer {
-  color: white;
+  color: var(--light-gray);
   font-size: small;
+  background-color: var(--navy);
+  padding: 1rem 0;
 }
 
 footer p {
-  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+}
+
+footer a {
+  color: var(--light-gray);
 }
 
 h1 {
-  font-family: "DM Sans", sans-serif;
-  font-weight: 1000;
+  font-weight: 900;
+  letter-spacing: 0.2rem;
 }
 
 menu {
@@ -76,30 +103,34 @@ menu {
 /* CLASSES */
 
 .container {
-  max-width: 1450px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
 .menu-item {
   display: inline-block;
-  color: white;
+  color: var(--light-gray);
   font-weight: 600;
+}
+
+.menu-item a {
+  color: var(--light-gray);
 }
 
 .menu-item::after {
   content: "";
   display: block;
-  color: var(--blue);
+  color: var(--gold);
   width: 0;
   border-bottom: 0.15rem solid;
   transition: all 0.2s;
 }
 
-.menu-item:hover::after{
+.menu-item:hover::after {
   width: 50%;
 }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1440px) {
   .container {
     padding: 0 1.5rem;
   }
@@ -245,7 +276,7 @@ menu {
 }
 
 .link:hover {
-  color: var(--blue);
+  color: var(--gold);
 }
 
 .header {
@@ -319,7 +350,6 @@ menu {
 }
 
 .past-bid {
-  font-family: "DM Sans", sans-serif;
   font-weight: 700;
   font-size: 1.2rem;
 }
@@ -412,7 +442,6 @@ menu {
 }
 
 .yes-no-btn {
-  font-family: "DM Sans", sans-serif;
   font-size: large;
   font-weight: 600;
   text-align: center;
@@ -469,7 +498,8 @@ menu {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-color: #fff;
+  color: var(--navy);
+  background-color: var(--off-white);
   margin: auto;
   padding: 1.5rem;
   border-radius: 0.7rem;
@@ -493,8 +523,15 @@ menu {
 
 .modal-name-input label,
 .modal-name-input input {
-  font-family: "DM Sans", sans-serif;
   font-size: 1.2rem;
+}
+
+.modal-name-input input {
+  color: var(--navy);
+  background-color: var(--off-white);
+  border: 1px solid var(--navy);
+  border-radius: 0.2rem;
+  padding: 0 0.25rem;
 }
 
 .modal-warning {
@@ -528,19 +565,12 @@ menu {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #000;
+  color: var(--navy);
   background-color: transparent;
   border-radius: 50%;
   height: 5rem;
   width: 5rem;
-}
-
-.add-player-plus {
-  font-size: 3.5rem;
-  line-height: 2.5rem;
-  width: 100%;
-  text-align: center;
-  /* transition: all 0.2s; */
+  border: 5px solid var(--navy);
 }
 
 #add-player-btn .fa-user {
@@ -553,25 +583,25 @@ menu {
 }
 
 #add-player-btn:hover {
-  color: #fff;
-  background-color: #000;
+  color: var(--gold);
+  background-color: var(--navy);
 }
 
 #submit-player-name {
   font-size: 1.1rem;
   font-weight: 700;
   background-color: transparent;
-  border: 0.15rem solid black;
+  border: 3px solid var(--navy);
   border-radius: 0.35rem;
   width: 6rem;
   margin: 0 auto;
   padding: 0.3rem 0.5rem;
-  color: black;
+  color: var(--navy);
 }
 
 #submit-player-name:hover {
-  color: white;
-  background-color: black;
+  color: var(--off-white);
+  background-color: var(--navy);
 }
 
 /* MEDIA QUERIES */
