--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,19 @@ header {
   padding: 1rem 0;
 }
 
+header > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header h1 {
   color: var(--off-white);
 }
 
 header p {
-  font-family: "Source Sans 3", sans-serif;
+  font-family: "Roboto Slab", serif;
+  font-weight: 600;
 }
 
 header span {
@@ -73,6 +80,7 @@ header span {
 main {
   flex: 1;
   background-color: var(--off-white);
+  padding: 1rem 0;
 }
 
 footer {
@@ -88,6 +96,16 @@ footer p {
 
 footer a {
   color: var(--light-gray);
+}
+
+footer .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer .fa-github {
+  font-size: 1.25rem;
 }
 
 h1 {
@@ -136,118 +154,6 @@ menu {
   }
 }
 
-.btn-default {
-  padding: 0.25rem 0.5rem;
-  font-weight: 600;
-  background-color: transparent;
-}
-
-.bdr-round-1 {
-  border-radius: 1rem;
-}
-
-.bdr-black {
-  border-color: #000;
-}
-
-.bdr-white {
-  border-color: #fff;
-}
-
-.bdr-green {
-  border-color: #0f0;
-}
-
-.bdr-red {
-  border-color: #f00;
-}
-
-.bdr-solid {
-  border-style: solid;
-}
-
-.bdr-3 {
-  border-width: 3px;
-}
-
-.bdr-4 {
-  border-width: 4px;
-}
-
-.bdr-5 {
-  border-width: 5px;
-}
-
-.bg-black {
-  background-color: #000;
-}
-
-.bg-white {
-  background-color: #fff;
-}
-
-.txt-black {
-  color: #000;
-}
-
-.txt-white {
-  color: #fff;
-}
-
-.txt-green {
-  color: #0f0;
-}
-
-.txt-red {
-  color: #f00;
-}
-
-.txt-center {
-  text-align: center;
-}
-
-.txt-small {
-  font-size: small;
-}
-
-.txt-125 {
-  font-size: 1.25rem;
-}
-
-.txt-semibold {
-  font-weight: 600;
-}
-
-.txt-italic {
-  font-style: italic;
-}
-
-.pad-all-1 {
-  padding: 1rem;
-}
-
-.pad-ver-1 {
-  padding: 1rem 0;
-}
-
-.pad-hor-1 {
-  padding: 0 1rem;
-}
-
-.pad-top-1 {
-  padding: 1rem 0 0;
-}
-
-.pad-bot-1 {
-  padding: 0 0 1rem;
-}
-
-.flex-space-between {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 @media screen and (max-width: 300px) {
   .flex-space-between {
     flex-direction: column;
@@ -263,12 +169,6 @@ menu {
   justify-content: center;
 }
 
-.ver-gap-1 {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .link {
   display: flex;
   align-items: center;
@@ -279,15 +179,9 @@ menu {
   color: var(--gold);
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .cardholder {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
@@ -298,23 +192,25 @@ menu {
 .card {
   position: relative;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: space-between;
-  padding: 3rem 1.5rem;
-  background-color: white;
+  padding: 1.5rem 1rem;
+  background-color: var(--off-white);
   color: black;
-  border-radius: 1rem;
+  border: 3px solid var(--mid-light-gray);
+  border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
-  width: 20rem;
-  height: 28rem;
+  /* width: 20rem;
+  height: 28rem; */
+  width: 664px;
 }
 
 .close {
   position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
+  top: 0.7rem;
+  right: 0.7rem;
   color: rgba(0, 0, 0, 0.5);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   transition: all 0.2s;
 }
 
@@ -329,17 +225,20 @@ menu {
   flex-direction: column;
   gap: 0.2rem;
   z-index: 1;
+  width: 200px;
 }
 
 .name {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
+  font-family: "Roboto Slab", serif;
+  color: var(--navy);
 }
 
 .bid-row {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .bid-history {
@@ -352,10 +251,11 @@ menu {
 .past-bid {
   font-weight: 700;
   font-size: 1.2rem;
+  line-height: 0.8rem;
 }
 
 .past-bid.right {
-  color: var(--blue);
+  color: var(--green);
 }
 
 .past-bid.wrong {
@@ -371,7 +271,17 @@ menu {
 
 .undo:hover {
   cursor: pointer;
-  color: black;
+  color: var(--navy);
+}
+
+.score {
+  font-family: "Roboto Slab", serif;
+  font-size: 6rem;
+  font-weight: 900;
+  color: var(--navy);
+  text-align: center;
+  line-height: 5rem;
+  z-index: 0;
 }
 
 .card-lower {
@@ -380,24 +290,18 @@ menu {
   gap: 1.5rem;
 }
 
-.score {
-  font-size: 10rem;
-  font-weight: 700;
-  text-align: center;
-  line-height: 9rem;
-  z-index: 0;
-}
-
 .controls {
   display: flex;
-  flex-direction: column;
   gap: 1rem;
+  padding: 0 18px 0 0;
 }
 
 .bid {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5rem;
   z-index: 1;
 }
 
@@ -409,35 +313,38 @@ menu {
 }
 
 .bid-btn.plus {
-  border-width: 0 0.75rem 1.3rem 0.75rem;
-  border-color: transparent transparent black transparent;
-  margin-bottom: 0.5rem;
+  border-width: 0 0.6rem 1.04rem 0.6rem;
+  border-color: transparent transparent var(--navy) transparent;
 }
 
 .bid-btn.plus:hover {
-  border-color: transparent transparent var(--blue) transparent;
+  border-color: transparent transparent var(--gold) transparent;
 }
 
 .bid-btn.minus {
-  border-width: 1.3rem 0.75rem 0 0.75rem;
-  border-color: black transparent transparent transparent;
-  margin-top: 0.5rem;
+  border-width: 1.04rem 0.6rem 0 0.6rem;
+  border-color: var(--navy) transparent transparent transparent;
 }
 
 .bid-btn.minus:hover {
-  border-color: var(--blue) transparent transparent transparent;
+  border-color: var(--gold) transparent transparent transparent;
 }
 
 .bid-num {
+  font-family: "Roboto Slab", serif;
   font-size: 1.5rem;
+  font-weight: 700;
   text-align: center;
-  width: 4rem;
+  width: 2rem;
+  color: var(--navy);
 }
 
 .yes-no {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 0.7rem;
   height: 100%;
 }
 
@@ -445,25 +352,25 @@ menu {
   font-size: large;
   font-weight: 600;
   text-align: center;
-  padding: 0.3rem 0.5rem;
+  padding: 0.1rem 0.5rem;
   border-width: 3px;
   border-style: solid;
-  border-radius: 0.5rem;
+  border-radius: 0.35rem;
   background-color: transparent;
   width: 6rem;
 }
 
 .yes-no-btn:hover {
-  color: white;
+  color: var(--off-white);
 }
 
 .yes {
-  color: var(--blue);
-  border-color: var(--blue);
+  color: var(--green);
+  border-color: var(--green);
 }
 
 .yes:hover {
-  background-color: var(--blue);
+  background-color: var(--green);
 }
 
 .no {
@@ -490,6 +397,7 @@ menu {
 }
 
 .modal h3 {
+  font-family: "Roboto Slab", serif;
   font-weight: 700;
 }
 
@@ -502,7 +410,7 @@ menu {
   background-color: var(--off-white);
   margin: auto;
   padding: 1.5rem;
-  border-radius: 0.7rem;
+  border-radius: 0.5rem;
   width: 400px;
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
@@ -527,6 +435,7 @@ menu {
 }
 
 .modal-name-input input {
+  font-weight: 600;
   color: var(--navy);
   background-color: var(--off-white);
   border: 1px solid var(--navy);
